# openamrobot-ui

./: .dockerignore  .gitignore  Dockerfile  PAUSE_NOTE.md  README.md  compile_ui.bash  docker-compose.yml  launch.bash
.github/: CODEOWNERS
docs/: 00-repo-map.md  README.md
ros2/openamr_ui_msgs/: CMakeLists.txt  package.xml
ros2/openamr_ui_package/: package.xml  setup.py
ros2/openamr_ui_package/launch/: new_ui_launch.py
ros2/openamr_ui_package/openamr_ui_package/: flask_app.py
ros2/openamr_ui_package/openamr_ui_package/static/app/: asset-manifest.json  index.html
ros2/openamr_ui_package/openamr_ui_package/static/app/static/css/: main.dc5fea70.css  main.dc5fea70.css.map
ros2/openamr_ui_package/openamr_ui_package/static/app/static/js/: main.35a8fe45.js  main.35a8fe45.js.LICENSE.txt  main.35a8fe45.js.map
ros2/openamr_ui_package/openamr_ui_package/templates/: index.html
ros2/openamr_ui_package/param/: config.yaml
ros2/src/openamr_ui_bringup/: package.xml  setup.cfg  setup.py
ros2/src/openamr_ui_bringup/launch/: ui.launch.py
ros2/src/openamr_ui_msgs/: CMakeLists.txt  package.xml
ros2/src/openamr_ui_msgs/msg/: ArrayPoseStampedWithCovariance.msg
ros2/src/openamr_ui_package/: .env.example  README.md  package.xml  setup.py
ros2/src/openamr_ui_package/launch/: README.md  map_server_launch.py  new_ui_launch.py  physnode_launch.py
ros2/src/openamr_ui_package/maps/: README.md
ros2/src/openamr_ui_package/openamr_ui_package/: README.md  battery.py  flask_app.py  folders_handler.py  map_relay.py  nav_relays.py  waypoint_nav.py
ros2/src/openamr_ui_package/openamr_ui_package/static/: README.md
ros2/src/openamr_ui_package/openamr_ui_package/static/app/: README.md  asset-manifest.json  index.html
ros2/src/openamr_ui_package/openamr_ui_package/static/app/ros/: nav2d.js  roslib.js
ros2/src/openamr_ui_package/openamr_ui_package/static/app/static/css/: main.adb01502.css  main.e0a0b472.css  main.e9bfffc3.css  main.e9bfffc3.css.map
ros2/src/openamr_ui_package/openamr_ui_package/static/app/static/js/: main.4dcee7fa.js  main.7a52bf78.js  main.7a52bf78.js.LICENSE.txt  main.7a52bf78.js.map  main.913580ac.js  main.c6659e00.js  main.c6659e00.js.LICENSE.txt
ros2/src/openamr_ui_package/openamr_ui_package/submodules/: README.md
ros2/src/openamr_ui_package/openamr_ui_package/templates/: README.md
ros2/src/openamr_ui_package/param/: README.md  config.yaml  current_map_route.yaml
ros2/src/openamr_ui_package/paths/: README.md
ros2/src/openamr_ui_package/resource/: README.md
ros2/src/openamr_ui_package/test/: test_flake8.py  test_pep257.py  test_smoke.py
scripts/: README.md  build_frontend.sh  build_ros.sh  build_ui_and_copy.sh  container_entrypoint.sh  run_ui_backend.sh  sync_frontend_to_ros.sh
tools/: build_all.sh
web/: README.md  package-lock.json  package.json  tailwind.config.js
web/public/ros/: nav2d.js
web/src/app/: App.jsx
web/src/components/: Camera.jsx  ControlSwitcher.jsx  DockingControl.jsx  Header.jsx  Joystick.jsx  LifecycleStatus.jsx  Logs.jsx  Map.jsx  MapLayers.jsx  NavStatus.jsx  RobotState.jsx  SystemAlerts.jsx  SystemHealth.jsx
web/src/components/modal/: RouteModal.jsx  TextInputModal.jsx  TimeModal.jsx
web/src/features/blocks/: README.md  backendLocations.js  backendPrograms.js  backendRunHistory.js  blockDefinitions.js  planValidation.js  programTemplates.js  robotActions.js  toolbox.js  voiceCapture.js  voicePlan.js
web/src/layouts/: appLayout.jsx
web/src/pages/: BlocksPage.jsx  ControlPage.jsx  InfoPage.jsx  MapPage.jsx  RoutePage.jsx  index.jsx
web/src/shared/constants/: index.js
web/src/shared/styles/: global.css
web/src/shared/ui/: Button.jsx  MapButton.jsx  RoundedButton.jsx
web/src/stores/: index.js
