<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openamr_ui_package</name>
  <version>0.0.0</version>
  <description>UI for AMRs</description>
  <maintainer email="tobbalya@gmail.com">darkadius</maintainer>
  <license>MIT</license>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>openamr_ui_msgs</depend>

  <!-- Python build tooling for ament_python -->
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <!-- Runtime Python deps -->
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <!-- Tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
